--- a/web-services/src/main/resources/application.properties
+++ b/web-services/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 
 spring.jpa.hibernate.ddl-auto=update
+
+class-register.db.create-entities=false
