--- a/web-services/src/main/resources/application.properties
+++ b/web-services/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 
 spring.jpa.hibernate.ddl-auto=update
 
-class-register.db.create-entities=true
+class-register.db.create-entities=false
