Entities for user authorization.

--- a/web-services/src/main/resources/application.properties
+++ b/web-services/src/main/resources/application.properties
@@ -1,11 +1,20 @@
+# Data source configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/class_register
 spring.datasource.username=system
 spring.datasource.password=system
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Hibernate properties
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.hibernate.ddl-auto=update
 
+# Jackson properties
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+spring.jackson.time-zone=UTC
+
+# Register class properties
 class-register.db.create-entities=false
+
+# Debugging
+logging.level.org.hibernate.SQL=DEBUG
