--- a/web-services/src/main/resources/application.properties
+++ b/web-services/src/main/resources/application.properties
@@ -7,14 +7,18 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # Hibernate properties
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
-spring.jpa.hibernate.ddl-auto=update
+# no session fix
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.jpa.hibernate.ddl-auto=create
 
 # Jackson properties
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.jackson.time-zone=UTC
 
-# Register class properties
-class-register.db.create-entities=false
+# Application properties
+class-register.db.create-entities=true
+class-register.auth.jwtSecret=JWTSuperSecretKey
+class-register.auth.jwtExpirationInMs=604800000
 
 # Debugging
 logging.level.org.hibernate.SQL=DEBUG
