--- a/ng-app/package.json
+++ b/ng-app/package.json
@@ -24,6 +24,9 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
+    "ngx-bootstrap": "^5.1.1",
+    "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
