--- a/web-services/src/main/resources/application.properties
+++ b/web-services/src/main/resources/application.properties
@@ -9,14 +9,14 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 # no session fix
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # Jackson properties
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.jackson.time-zone=UTC
 
 # Application properties
-class-register.db.create-entities=true
+class-register.db.create-entities=false
 class-register.auth.jwtSecret=JWTSuperSecretKey
 class-register.auth.jwtExpirationInMs=604800000
 
